--- a/src/assets/styles/home.css
+++ b/src/assets/styles/home.css
@@ -1,8 +1,13 @@
-h1
-h2 {
-
-}
-
+a {
+    text-decoration: none;
+    color: #444;
+    transition: background-color 0.5s ease-in-out;
+  }
+  
+  a:hover {
+    background-color: rgba(255, 255, 255, 0.8);
+  }
+  
 .bg-image {
     background-size: cover;
     background-position: center;
