--- a/src/assets/styles/home.css
+++ b/src/assets/styles/home.css
@@ -21,7 +21,13 @@ a {
     background-blend-mode: overlay;
 }
 
+.bg-contact {
+    background-image: url('../pictures/contact-bg.jpg')
+}
 
+.bg-white {
+    background-color: white;
+}
 
 
 @media screen and  (max-width: 767px) {
