--- a/src/assets/styles/home.css
+++ b/src/assets/styles/home.css
@@ -4,10 +4,9 @@ a {
     transition: background-color 0.5s ease-in-out;
   }
   
-  a:hover {
-    background-color: rgba(255, 255, 255, 0.8);
-  }
-  
+li{
+    list-style: none;
+}
 
 .bg-image {
     background-size: cover;
@@ -22,7 +21,8 @@ a {
 }
 
 .bg-contact {
-    background-image: url('../pictures/contact-bg.jpg')
+    background-image: url('../pictures/contact-bg.jpg');
+    background-color: (0,105,225,0.5);
 }
 
 .bg-white {
@@ -57,4 +57,11 @@ a {
 .dotted{
     text-decoration: underline dotted;
     text-transform: uppercase;
+}
+
+a:hover {
+    background-color: rgba(255, 255, 255, 0.8);
+  }
+.icon:hover {
+    color:#cde1f8;
 }
